--- a/rai/index.html
+++ b/rai/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>らいの自己紹介</title>
-    <link rel="stylesheet" href="rai.css">
+    <link rel="stylesheet" href="https://retdayo.github.io/komuguru-site/css/rai.css">
 </head>
 <body>
     <header>
