らいさん自己紹介更新

--- a/rai/index.html
+++ b/rai/index.html
@@ -13,13 +13,19 @@
 
     <section class="profile">
         <h2>こんにちは！</h2>
-        <p>名前は<strong>らい</strong>です。</p>
+        <p>私は<strong>らい</strong>です。</p>
         <p>好きな食べ物は甘いものとお好み焼きです！</p>
         <p>苦手なものは餡子と虫です。紫色が大好きです！</p>
+        <button id="toggleButton">もっと見る</button>
+        <div id="extraInfo" class="hidden">
+            <p>趣味や特技、その他の情報をここに追加できます。</p>
+        </div>
     </section>
 
     <footer>
         <p>自己紹介ページに訪問してくれてありがとう！</p>
     </footer>
+
+    <script src="/js/rai.js"></script>
 </body>
 </html>
