らいさん自己紹介更新

--- a/rai/index.html
+++ b/rai/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>らいの自己紹介</title>
-    <link rel="stylesheet" href="https://retdayo.github.io/komuguru-site/css/rai.css">
+    <link rel="stylesheet" href="/komuguru-site/css/rai.css">
 </head>
 <body>
     <header>
@@ -26,6 +26,6 @@
         <p>自己紹介ページに訪問してくれてありがとう！</p>
     </footer>
 
-    <script src="/js/rai.js"></script>
+    <script src="/komuguru-site/js/rai.js"></script>
 </body>
 </html>
