らいさん自己紹介更新

--- a/rai/index.html
+++ b/rai/index.html
@@ -18,6 +18,7 @@
         <p>苦手なものは餡子と虫です。紫色が大好きです！</p>
     </section>
 
+    <script src="/komuguru-site/js/script.js"></script>
     <footer>
         <p>自己紹介ページに訪問してくれてありがとう！</p>
     </footer>
